# scattering-geometry-tools

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py  setup_cython.py  tox.ini
docs/: .buildinfo  .buildinfo.bak  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  sgt.core.html  sgt.html  sgt.pilatus.html
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  sgt.core.doctree  sgt.doctree  sgt.pilatus.doctree
docs/_modules/: index.html  sgt.html
docs/_modules/sgt/: core.html  pilatus.html
docs/_sources/: index.rst.txt  sgt.core.rst.txt  sgt.pilatus.rst.txt  sgt.rst.txt
src/sgt/: __init__.py  _cpolarize.c  _cpolarize.pyx  _crefine.c  _crefine.pyx  _pypolarize.py  core.py  crystal.py  hdf5image.py  legacy_geometry.py  npzimage.py  pilatus.py  refine.py
test/: npzimage.npz  test_npzimage.py  test_opt.py
test/test data for refine/: AgBh.tif  Geometry_AgBh.txt  Mask_EmptyBeam.npz  README.txt
tests/: test_core.py  test_hdf5image.py  test_legacy_geometry.py  test_npzimage.py
tests/data/20240223_PF_BL6A/1_2400mm_RSC_WAXS/: AgBh_2.tif  CeO2.tif
tests/data/20240223_PF_BL6A/r1_2400mm_RSC_WAXS/common/: AgBh.txt  AgBh_validation.hdf5  CeO2.txt  Geometry.txt  Mask.hdf5
