[build-system]
requires = ["setuptools>=45", "wheel", "numpy>=1.23"]
build-backend = "setuptools.build_meta"

[project]
name = "scattering-geometry-tools"
version = "0.1.4"
description = "Tools for calculations of geometries in scattering experiments. "
readme = "README.md"
authors = [{name = "Shintaro Nakagawa", email = "shntrnkgw@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23", 
    "scipy>=1.9.0"
]

[project.urls]
Homepage = "https://github.com/shntrnkgw/scattering-geometry-tools"

[tool.setuptools]
package-dir = {"" = "src"}