[build-system]
# requires = ["setuptools>=45", "wheel", "numpy>=1.23"]
# build-backend = "setuptools.build_meta"
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sgt"]

[project]
name = "scattering-geometry-tools"
version = "1.0.0"
description = "Tools for calculations of geometries in scattering experiments. "
readme = "README.md"
authors = [{name = "Shintaro Nakagawa", email = "shntrnkgw@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.13.0",
    "numpy>=2.2.3"
]

[project.urls]
Homepage = "https://github.com/shntrnkgw/scattering-geometry-tools"

[dependency-groups]
dev = [
    "hicsv-python>=1.1.0",
    "matplotlib>=3.10.1",
    "pytest>=8.3.5",
    "sphinx>=8.2.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
